--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
       crossorigin="anonymous"
     ></script>
   </head>
+<!-- Go to Top Button -->
+<button onclick="scrollToTop()" id="goTopBtn" title="Go to top">↑</button>
+<script>
+  // Show/hide button when scrolling
+  window.onscroll = function () {
+    const btn = document.getElementById("goTopBtn");
+    if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+      btn.style.display = "block";
+    } else {
+      btn.style.display = "none";
+    }
+  };
 
+  // Scroll to top smoothly
+  function scrollToTop() {
+    window.scrollTo({
+      top: 0,
+      behavior: 'smooth'
+    });
+  }
+</script>
   <body>
     <header>
       <div class="content flex_space">
@@ -85,6 +105,9 @@
                           <input type="password" id="confirmPassword" required>
                       </div>
                       <button type="submit" class="btn-primary">Change Password</button>
+                      <!-- Add these elements where you want the buttons to appear (likely below "CHANGE PASSWORD" text) -->
+   
+
                   </form>
               </div>
           </div>
@@ -301,7 +324,7 @@
                   ngoạn mục cho một kỳ nghỉ thực sự đáng nhớ
                 </p>
                 <div class="button flex">
-                  <button class="primary-btn">BOOK NOW</button>
+                  <button class="primary-btn" onclick="window.location.href='booking.html?room=Superior'">BOOK NOW</button>
                   <h3>
                     $249
                     <span>
@@ -332,7 +355,7 @@
                   đi của họ."
                 </p>
                 <div class="button flex">
-                  <button class="primary-btn">BOOK NOW</button>
+                  <button class="primary-btn" onclick="window.location.href='booking.html?room=Large'">BOOK NOW</button>
                   <h3>
                     $199
                     <span>
@@ -362,7 +385,7 @@
                   không gian yên bình cho một kỳ nghỉ thư giãn."
                 </p>
                 <div class="button flex">
-                  <button class="primary-btn">BOOK NOW</button>
+                  <button class="primary-btn" onclick="window.location.href='booking.html?room=Medium'">BOOK NOW</button>
                   <h3>
                     $159
                     <span>
@@ -541,14 +564,7 @@
         },
       });
     </script>
-
-    <section class="gallery">
-      <div class="container top">
-        <div class="heading">
-          <h1>PHOTOS</h1>
-          <h2>Our Gallery</h2>
-        </div>
-      </div>
+     
 
       <div class="content mtop">
         <div class="owl-carousel owl-carousel1 owl-theme">
@@ -866,7 +882,23 @@
         </div>
       </div>
     </section>
-
+    <section id="location" style="padding: 60px 20px; background-color: #f8f8f8;">
+      <h2 style="text-align: center; font-size: 60px; font-family: 'Georgia', serif; color: #2c3e50;">
+        Visit Our Tranquil Paradise
+      </h2>
+      <p style="text-align: center; font-size: 18px; color: #555; max-width: 700px; margin: 10px auto 30px;">
+        Nestled on the peaceful coastline of Da Nang, <strong>Crowny Hotel</strong> offers elegant beachfront living.
+        Discover tropical luxury and personalized service, just moments from the city.
+      </p>
+    
+      <div style="max-width: 900px; margin: 0 auto; border: 1px solid #ccc; border-radius: 10px; overflow: hidden;">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15335.496633017865!2d108.2673!3d16.0533!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31420fa1aa7d945f%3A0x8a16a193d0f9b143!2sThe%20Ocean%20Villas%20Da%20Nang!5e0!3m2!1sen!2s!4v1717187654321!5m2!1sen!2s"
+          width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
+    </section>
     <section class="newsletter mtop">
       <div class="container flex_space">
         <h1>Subscribe to Our Newsletter</h1>
