fix login + change password + payment

--- a/html/signup.html
+++ b/html/signup.html
@@ -9,18 +9,18 @@
 
     <div class="container">
         <h2>Sign Up</h2>
-        <form id="signup-form">
+        <form id="signupForm">
             <div class="form-group">
-                <label for="signup-name">Name:</label>
-                <input type="text" id="signup-name" name="signup-name" required>
+                <label for="name">Name:</label>
+                <input type="text" id="username" name="name" required>
             </div>
             <div class="form-group">
-                <label for="signup-email">Email:</label>
-                <input type="email" id="signup-email" name="signup-email" required>
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
             </div>
             <div class="form-group">
-                <label for="signup-password">Password:</label>
-                <input type="password" id="signup-password" name="signup-password" required>
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Sign Up</button>
             <div class="switch-form">
@@ -29,5 +29,6 @@
         </form>
     </div>
 
+    <script src="../js/signup.js"></script>
 </body>
 </html>
