--- a/html/login.html
+++ b/html/login.html
@@ -8,23 +8,23 @@
   </head>
   <body>
     <div class="container">
-      <div id="login-form">
+      <div id="loginForm">
         <h2>Login</h2>
-        <form id="login-form-actual">
+        <form id="form-actual">
           <div class="form-group">
-            <label for="login-email">Email:</label>
-            <input type="email" id="login-email" name="login-email" required />
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required />
           </div>
           <div class="form-group">
-            <label for="login-password">Password:</label>
+            <label for="password">Password:</label>
             <input
               type="password"
-              id="login-password"
-              name="login-password"
+              id="password"
+              name="password"
               required
             />
           </div>
-          <button type="submit" id="login-btn">Login</button>
+          <button type="submit" id="btn">Login</button>
         </form>
         <div class="switch-form">
           Don't have an account?
