--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
           <div class="owl-carousel owl-carousel1 owl-theme">
             <div class="items">
               <div class="image">
-                <img src="./images/room-1.png" alt="" />
+                <img src="./Images/room-1.png" alt="" />
               </div>
               <div class="text">
                 <h2>Suporior Rooms</h2>
@@ -391,7 +391,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-2.png" alt="" />
+                <img src="./Images/room-2.png" alt="" />
               </div>
               <div class="text">
                 <h2>Large Room</h2>
@@ -427,7 +427,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-3.png" alt="" />
+                <img src="./Images/room-3.png" alt="" />
               </div>
               <div class="text">
                 <h2>Medium Room</h2>
@@ -462,7 +462,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-4.png" alt="" />
+                <img src="./Images/room-4.png" alt="" />
               </div>
               <div class="text">
                 <h2>Giường Đơn</h2>
@@ -491,7 +491,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-5.png" alt="" />
+                <img src="./Images/room-5.png" alt="" />
               </div>
               <div class="text">
                 <h2>Giường Đơn</h2>
@@ -520,7 +520,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-6.png" alt="" />
+                <img src="./Images/room-6.png" alt="" />
               </div>
               <div class="text">
                 <h2>All-in-one room</h2>
@@ -545,7 +545,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-7.png" alt="" />
+                <img src="./Images/room-7.png" alt="" />
               </div>
               <div class="text">
                 <h2>Phòng Lớn + giường đôi</h2>
@@ -574,7 +574,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/room-8.png" alt="" />
+                <img src="./Images/room-8.png" alt="" />
               </div>
               <div class="text">
                 <h2>Suporior Rooms</h2>
@@ -634,7 +634,7 @@
       <div class="owl-carousel owl-carousel1 owl-theme">
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-1.png" alt="" />
+            <img src="./Images/gallery-1.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -643,7 +643,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-2.png" alt="" />
+            <img src="./Images/gallery-2.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -652,7 +652,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-3.png" alt="" />
+            <img src="./Images/gallery-3.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -661,7 +661,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-4.png" alt="" />
+            <img src="./Images/gallery-4.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -670,7 +670,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-5.png" alt="" />
+            <img src="./Images/gallery-5.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -679,7 +679,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-6.png" alt="" />
+            <img src="./Images/gallery-6.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -688,7 +688,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-4.png" alt="" />
+            <img src="./Images/gallery-4.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -697,7 +697,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-3.png" alt="" />
+            <img src="./Images/gallery-3.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -706,7 +706,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-1.png" alt="" />
+            <img src="./Images/gallery-1.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -715,7 +715,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./images/gallery-6.png" alt="" />
+            <img src="./Images/gallery-6.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -788,7 +788,7 @@
             </div>
           </div>
           <div class="right">
-            <img src="./images/service.png" alt="" />
+            <img src="./Images/service.png" alt="" />
           </div>
         </div>
       </div>
@@ -869,7 +869,7 @@
           <div class="left grid2">
             <div class="items">
               <div class="image">
-                <img src="./images/blog-1.png" alt="" />
+                <img src="./Images/blog-1.png" alt="" />
               </div>
               <div class="text">
                 <h2>A new decorated bar</h2>
@@ -905,7 +905,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./images/blog-2.png" alt="" />
+                <img src="./Images/blog-2.png" alt="" />
               </div>
               <div class="text">
                 <h2>Our new Suporior Rooms</h2>
@@ -945,7 +945,7 @@
           <div class="right">
             <div class="box flex">
               <div class="img">
-                <img src="./images/blog-s1.png" alt="" />
+                <img src="./Images/blog-s1.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Seaside Sanctuary Villa</h2>
@@ -958,7 +958,7 @@
             </div>
             <div class="box flex">
               <div class="img">
-                <img src="./images/blog-s2.png" alt="" />
+                <img src="./Images/blog-s2.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Family Fun Beachfront Retreat</h2>
@@ -971,7 +971,7 @@
             </div>
             <div class="box flex">
               <div class="img">
-                <img src="./images/blog-s3.png" alt="" />
+                <img src="./Images/blog-s3.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Heartwarming Homestay Experience</h2>
