--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <div class="content flex_space">
         <!-- Logo của trang web -->
         <div class="logo">
-          <img style="height: 6vh" src="images/logo.png" alt="" />
+          <img style="height: 6vh" src="./Images/logo.png" alt="" />
         </div>
 
         <!-- Thanh điều hướng -->
@@ -190,7 +190,7 @@
         <div class="owl-carousel owl-theme">
           <!-- Slide 1 -->
           <div class="item">
-            <img src="images/banner-1.png" alt="" />
+            <img src="./Images/banner-1.png" alt="" />
             <div class="text">
               <h1>Spend Your Holiday</h1>
               <p>"Best Rates Guaranteed: Your Vacation Starts Here.</p>
@@ -203,7 +203,7 @@
 
           <!-- Slide 2 -->
           <div class="item">
-            <img src="images/banner-2.png" alt="" />
+            <img src="./Images/banner-2.png" alt="" />
             <div class="text">
               <h1>Spend Your Holiday</h1>
               <p></p>
@@ -216,7 +216,7 @@
 
           <!-- Slide 3 -->
           <div class="item">
-            <img src="images/banner-3.png" alt="" />
+            <img src="./Images/banner-3.png" alt="" />
             <div class="text">
               <h1>Spend Your Holiday</h1>
               <p>
@@ -230,7 +230,7 @@
             </div>
           </div>
           <div class="item">
-            <img src="images/banner-3.png" alt="" />
+            <img src="./Images/banner-3.png" alt="" />
             <div class="text">
               <h1>Spend Your Holiday</h1>
               <p>
@@ -315,7 +315,7 @@
           <button class="primary-btn">ABOUT US</button>
         </div>
         <div class="right">
-          <img src="images/about.png" alt="" />
+          <img src="./Images/about.png" alt="" />
         </div>
       </div>
     </section>
@@ -356,7 +356,7 @@
           <div class="owl-carousel owl-carousel1 owl-theme">
             <div class="items">
               <div class="image">
-                <img src="./Images/room-1.png" alt="" />
+                <img src="././Images/room-1.png" alt="" />
               </div>
               <div class="text">
                 <h2>Suporior Rooms</h2>
@@ -391,7 +391,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-2.png" alt="" />
+                <img src="././Images/room-2.png" alt="" />
               </div>
               <div class="text">
                 <h2>Large Room</h2>
@@ -427,7 +427,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-3.png" alt="" />
+                <img src="././Images/room-3.png" alt="" />
               </div>
               <div class="text">
                 <h2>Medium Room</h2>
@@ -462,7 +462,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-4.png" alt="" />
+                <img src="././Images/room-4.png" alt="" />
               </div>
               <div class="text">
                 <h2>Giường Đơn</h2>
@@ -491,7 +491,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-5.png" alt="" />
+                <img src="././Images/room-5.png" alt="" />
               </div>
               <div class="text">
                 <h2>Giường Đơn</h2>
@@ -520,7 +520,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-6.png" alt="" />
+                <img src="././Images/room-6.png" alt="" />
               </div>
               <div class="text">
                 <h2>All-in-one room</h2>
@@ -545,7 +545,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-7.png" alt="" />
+                <img src="././Images/room-7.png" alt="" />
               </div>
               <div class="text">
                 <h2>Phòng Lớn + giường đôi</h2>
@@ -574,7 +574,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/room-8.png" alt="" />
+                <img src="././Images/room-8.png" alt="" />
               </div>
               <div class="text">
                 <h2>Suporior Rooms</h2>
@@ -634,7 +634,7 @@
       <div class="owl-carousel owl-carousel1 owl-theme">
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-1.png" alt="" />
+            <img src="././Images/gallery-1.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -643,7 +643,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-2.png" alt="" />
+            <img src="././Images/gallery-2.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -652,7 +652,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-3.png" alt="" />
+            <img src="././Images/gallery-3.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -661,7 +661,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-4.png" alt="" />
+            <img src="././Images/gallery-4.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -670,7 +670,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-5.png" alt="" />
+            <img src="././Images/gallery-5.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -679,7 +679,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-6.png" alt="" />
+            <img src="././Images/gallery-6.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -688,7 +688,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-4.png" alt="" />
+            <img src="././Images/gallery-4.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -697,7 +697,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-3.png" alt="" />
+            <img src="././Images/gallery-3.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -706,7 +706,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-1.png" alt="" />
+            <img src="././Images/gallery-1.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -715,7 +715,7 @@
         </div>
         <div class="items">
           <div class="img">
-            <img src="./Images/gallery-6.png" alt="" />
+            <img src="././Images/gallery-6.png" alt="" />
           </div>
           <div class="overlay">
             <span class="fa fa-plus"> </span>
@@ -788,7 +788,7 @@
             </div>
           </div>
           <div class="right">
-            <img src="./Images/service.png" alt="" />
+            <img src="././Images/service.png" alt="" />
           </div>
         </div>
       </div>
@@ -869,7 +869,7 @@
           <div class="left grid2">
             <div class="items">
               <div class="image">
-                <img src="./Images/blog-1.png" alt="" />
+                <img src="././Images/blog-1.png" alt="" />
               </div>
               <div class="text">
                 <h2>A new decorated bar</h2>
@@ -905,7 +905,7 @@
             </div>
             <div class="items">
               <div class="image">
-                <img src="./Images/blog-2.png" alt="" />
+                <img src="././Images/blog-2.png" alt="" />
               </div>
               <div class="text">
                 <h2>Our new Suporior Rooms</h2>
@@ -945,7 +945,7 @@
           <div class="right">
             <div class="box flex">
               <div class="img">
-                <img src="./Images/blog-s1.png" alt="" />
+                <img src="././Images/blog-s1.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Seaside Sanctuary Villa</h2>
@@ -958,7 +958,7 @@
             </div>
             <div class="box flex">
               <div class="img">
-                <img src="./Images/blog-s2.png" alt="" />
+                <img src="././Images/blog-s2.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Family Fun Beachfront Retreat</h2>
@@ -971,7 +971,7 @@
             </div>
             <div class="box flex">
               <div class="img">
-                <img src="./Images/blog-s3.png" alt="" />
+                <img src="././Images/blog-s3.png" alt="" />
               </div>
               <div class="stext">
                 <h2>Heartwarming Homestay Experience</h2>
@@ -1046,7 +1046,7 @@
     <footer>
       <div class="container grid">
         <div class="box">
-          <img src="images/logo-2.png" alt="" />
+          <img src="./Images/logo-2.png" alt="" />
           <p>
             Connect with Crowny on social media for exclusive updates,
             behind-the-scenes content, and special offers. Join our community
